Fix: eureka - mydata 통신 오류 수정
Change-Id: I09e479623a5f51c626256b5edeb1977df84c4cf8